fix overflow bug

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 :root {
@@ -76,6 +77,8 @@ html {
   @apply w-full h-screen relative overflow-hidden;
   background: linear-gradient(40deg, var(--color-bg1), var(--color-bg2));
   z-index: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 .gradient-container {
